--- a/org.osgi.impl.bundle.autoconf/.classpath
+++ b/org.osgi.impl.bundle.autoconf/.classpath
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/org.osgi.service.deploymentadmin"/>
-	<classpathentry kind="src" path="/org.osgi.framework"/>
-	<classpathentry kind="src" path="/org.osgi.service.cm"/>
-	<classpathentry kind="src" path="/org.osgi.service.metatype"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.service.component"/>
-	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/com.icl.saxon/com.icl.saxon-6.5.1.jar"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
