--- a/osgi.specs/.classpath
+++ b/osgi.specs/.classpath
@@ -6,5 +6,5 @@
 	<classpathentry kind="src" path="/org.osgi.tools"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ee.foundation"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ee.minimum"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="src"/>
 </classpath>
