--- a/org.osgi.impl.service.discovery/.classpath
+++ b/org.osgi.impl.service.discovery/.classpath
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="src" path="/org.osgi.service.discovery"/>
-	<classpathentry kind="lib" path="/licensed/repo/jslp/jslp-osgi-1.0.0.RC3.jar"/>
-	<classpathentry kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.0.0.jar"/>
-	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/org.eclipse.osgi/org.eclipse.osgi-3.5.0.jar"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
