move DNChainMatching to the licensed repo

--- a/org.osgi.test.cases.deploymentadmin.mo/build.properties
+++ b/org.osgi.test.cases.deploymentadmin.mo/build.properties
@@ -37,4 +37,4 @@ www/dp_removes_resource_for_rp4.dp=delivered/dp_removes_resource_for_rp4.dp,\
 www/bundle001.jar=delivered/bundle001.jar,\
 www/invalid_dlota.xml=res/invalid_dlota.xml,\
 www/update/bundle001.jar=res/bundle001.jar,\
-DNChainMatching.jar=ext/DNChainMatching.jar
+DNChainMatching.jar=/licensed/repo/DNChainMatching/DNChainMatching-1.0.0.jar
