--- a/org.osgi.test.cases.deploymentadmin.tc2/.classpath
+++ b/org.osgi.test.cases.deploymentadmin.tc2/.classpath
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" kind="lib" sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar"/>
-	<classpathentry sourcepath="org.osgi.test.cases/src" kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
