Subprojects were all releasing to the top level project. This meant that osgi.ri did not have the expected bundles in its osgi.ri/generated area when the build started in osgi.ct because all bundles ended up in osgi.ct/generated. Sigh. So bnd now gets a property "top". This is set to the topmost generated directory and fixed for a build (it is derived from release.dir in the build.xml). The build.bnd file then sets a release.target property that is either the projects target when it is top or the top projects target in a sub build.

--- a/cnf/build.xml
+++ b/cnf/build.xml
@@ -34,8 +34,7 @@
 
 		<available file="bnd.bnd" property="use.bnd" />
 
-		<bndprepare basedir="${projectdir}" print="false" />
-
+		<bndprepare basedir="${projectdir}" print="false" top="${release.dir}"/>
 		<!-- Now we have the same properties set as bnd 
 		-->
 
@@ -234,6 +233,7 @@
 		<echo>bin.includes:           ${bin.includes}</echo>
 		<echo>base.modfied:           ${base.modified} (${base.modified.readable})</echo>
 		<echo>target:                 ${target}</echo>
+		<echo>release.target:         ${release.target}</echo>
 		<echo>licensed repo:          ${licensed-repo}</echo>
 		<echo>repo:                   ${repo}</echo>
 		<echo>use.bnd:                ${use.bnd}</echo>
