--- a/r4.mobile/org.osgi.test.cases.deploymentadmin.mo/build.properties
+++ b/r4.mobile/org.osgi.test.cases.deploymentadmin.mo/build.properties
@@ -36,4 +36,5 @@ www/dp_installs_resource_for_rp4.dp=delivered/dp_installs_resource_for_rp4.dp,\
 www/dp_removes_resource_for_rp4.dp=delivered/dp_removes_resource_for_rp4.dp,\
 www/bundle001.jar=delivered/bundle001.jar,\
 www/invalid_dlota.xml=res/invalid_dlota.xml,\
-www/update/bundle001.jar=res/bundle001.jar
+www/update/bundle001.jar=res/bundle001.jar,\
+DNChainMatching.jar=../licensed/jar/DNChainMatching.jar
