--- a/org.osgi.test.cases.deploymentadmin.mo/.classpath
+++ b/org.osgi.test.cases.deploymentadmin.mo/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="/ee.minimum" kind="lib" path="/osgi.released/ee.minimum.jar"/>
+	<classpathentry kind="lib" path="/osgi.released/ee.foundation.jar" sourcepath="/osgi.released/ee.foundation.jar"/>
 	<classpathentry kind="lib" path="/osgi.released/osgi.jar"/>
-	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/osgi.released/osgi.internal.jar"/>
-	<classpathentry sourcepath="/osgi.released/ee.foundation.jar" kind="lib" path="/osgi.released/ee.foundation.jar"/>
+	<classpathentry kind="lib" path="/osgi.released/osgi.internal.jar" sourcepath="/org.osgi.test.cases/src"/>
+	<classpathentry kind="lib" path="/licensed/jar/DNChainMatching.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
