Created osgi.mobile.tck-ri.zip, which only contains the mobile tests and ris

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -13,7 +13,8 @@ jars.compile.order = \
   osgi.develop.zip, \
   osgi.ri-tck.zip, \
   osgi.mobile.tck.zip, \
-  osgi.mobile.ri.zip
+  osgi.mobile.ri.zip, \
+  osgi.mobile.ri-tck.zip
 
 bin.includes = osgi.min.jar, \
   osgi.refimpl.jar, \
@@ -25,8 +26,8 @@ bin.includes = osgi.min.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
   osgi.develop.zip, \
-  osgi.ri-tck.zip
-  
+  osgi.ri-tck.zip, \
+  osgi.mobile.ri-tck.zip  
 
 prebuild =  org.osgi.impl.framework.eclipse, \
   ${impls} , ${tests}, \
@@ -90,6 +91,32 @@ expand.osgi.mobile.impls.jar = org.osgi.tools.group, \
 include.osgi.mobile.tests.jar = ${replace;${mobile.tests};$;.jar}
 expand.osgi.mobile.tests.jar = org.osgi.tools.group
 
+include.osgi.mobile.ri-tck.zip= \
+ [about.html=about-zip.html], \
+ NOTICE=NOTICE.txt, \
+ target/build.xml=target/build.xml, \
+ target/osgi.properties=target/osgi.properties, \
+ target/policy=target/policy, \
+ target/keystore=target/keystore, \
+ target/delivered=target/delivered, \
+ director/build.xml=director/build.xml, \
+ director/mobile.script=director/mobile.script, \
+ director/link.script=director/link.script, \
+ director/Director.launch=director/Director.launch, \
+ director/osgi.properties=director/osgi.properties, \
+ director/test.properties=director/test.properties, \
+ osgi.min.jar, \
+ osgi.target.jar, \
+ testcond.jar, \
+ org.osgi.test.cases.testtool.jar, \
+ org.osgi.impl.framework.eclipse.jar, \
+ osgi.jar, \
+ org.osgi.tools.console.jar, \
+ osgi.director.jar, \
+ osgi.mobile.jar, \
+ osgi.mobile.impls.jar, \
+ osgi.mobile.tests.jar, \
+ doc/osgi.mobile.html
 
 # Compliance program
 before.osgi.ri-tck.zip = crossref
