--- a/osgi.specs/build.xml
+++ b/osgi.specs/build.xml
@@ -10,15 +10,21 @@
 			<fileset dir="xml" includes="*.xml"/>
 		</delete>
 		<echo>${javadoc}</echo>
-		<javadoc doclet="org.osgi.tools.xmldoclet.XmlDoclet" docletpath="../org.osgi.tools/src" classpath="${project.classpath}" encoding="utf-8" packagenames="${javadoc}">
+		<javadoc doclet="org.osgi.tools.xmldoclet.XmlDoclet" docletpath="../org.osgi.tools/src" encoding="utf-8" packagenames="${javadoc}">
 			<sourcepath>
 				<dirset dir="${workspace}">
 					<include name="*/src" />
 				</dirset>
 			</sourcepath>
+			<classpath>
+				<dirset dir="${workspace}">
+					<include name="*/src" />
+				</dirset>
+			    <pathelement location="${servlet}"/>
+			</classpath>
 		</javadoc>
 
-		<java classname="com.icl.saxon.StyleSheet" classpath="../licensed/jar/saxon.jar" fork="true">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true">
 			<arg line="javadoc.xml xsl/javadoc.xsl" />
 		</java>
 
@@ -30,31 +36,31 @@
 
 	<target name="ees" depends="init">
 
-		<java classname="org.osgi.tools.jar2xml.JAR2XML" classpath="${repo}/osgi.tools/osgi.tools-1.1.0.jar" fork="true" output="ee.xml">
+		<java classname="org.osgi.tools.jar2xml.JAR2XML" classpath="${jar2xml}" fork="true" output="ee.xml">
 			<arg line="-tagged minimum ${repo}/ee.minimum/ee.minimum-1.1.3.jar" />
 			<arg line="-tagged foundation ${repo}/ee.foundation/ee.foundation-1.1.0.jar" />
 		</java>
 		<echo>Converted JARs to XML</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="../licensed/jar/saxon.jar" fork="true" output="ee.html">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="ee.html">
 			<arg line="ee.xml xsl/ee.xsl" />
 		</java>
 		<echo>Generated HTML file</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${workspace}/licensed/jar/saxon.jar" fork="true" output="ee.tmp">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="ee.tmp">
 			<arg line="ee.html xsl/html2mif.xsl" />
 		</java>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${project.classpath}" input="ee.tmp" output="mif/ee.mif">
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="ee.tmp" output="mif/ee.mif">
 		</java>
 	</target>
 
 	<target name="eediff" depends="init">
-		<java classname="com.icl.saxon.StyleSheet" classpath="../licensed/jar/saxon.jar" fork="true" output="eediff.html">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="eediff.html">
 			<arg line="eediffs/FP1.0-FP1.1.xml xsl/eediff.xsl" />
 		</java>
 		<echo>Generated HTML file</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${workspace}/licensed/jar/saxon.jar" fork="true" output="eediff.tmp">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="eediff.tmp">
 			<arg line="eediff.html xsl/html2mif.xsl" />
 		</java>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${project.classpath}" input="eediff.tmp" output="mif/eediff.mif">
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="eediff.tmp" output="mif/eediff.mif">
 		</java>		
 	</target>
 	
@@ -68,25 +74,25 @@
 
 	<target name="coverage" depends="init">
 		<echo>Coverage Core</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${workspace}/licensed/jar/saxon.jar" fork="true" output="html.tmp">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="html.tmp">
 			<arg line="../osgi.test/osgi.core.html xsl/html2mif.xsl" />
 		</java>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${project.classpath}" input="html.tmp" output="mif/org.osgi.core.mif">
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="html.tmp" output="mif/org.osgi.core.mif">
 		</java>
 	</target>
 
 	<target name="-ddf2mif">
-		<java classname="com.icl.saxon.StyleSheet" classpath="../licensed/jar/saxon.jar" fork="true" 
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" 
 			output="ddftmp/${item}.htm">
 			<arg line="ddftmp/${item}.xml xsl/ddf2mif.xsl" />
 		</java>
 		<echo>Generated HTML file</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${workspace}/licensed/jar/saxon.jar" 
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" 
 			fork="true" output="ddftmp/${item}.tmp">
 			<arg line="ddftmp/${item}.htm xsl/html2mif.xsl" />
 		</java>
 		<echo>Generated XML MIF file</echo>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${project.classpath}" 
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" 
 		input="ddftmp/${item}.tmp" output="mif/${item}.mif">
 		</java>
 		<echo>Generated MIF file</echo>
@@ -94,10 +100,10 @@
 
 	<target name="-html2mif">
 		<basename property="base" file="${item}" suffix=".xml"/>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${workspace}/licensed/jar/saxon.jar" fork="true">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true">
 			<arg line="-o ${base}.tmp xml/${base}.xml xsl/html2mif.xsl" />
 		</java>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${project.classpath}">
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}">
 			<arg line="-i ${base}.tmp -o mif/${base}.mif" />
 		</java>
 		<delete file="${base}.tmp" />
