--- a/osgi.specs/build.xml
+++ b/osgi.specs/build.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="project" default="javadoc">
 	<import file="../cnf/build.xml" />
-	
+
 
 	<target name="javadoc" depends="init">
 		<echo>${javadoc}</echo>
 		<mkdir dir="mif" />
 		<delete>
-			<fileset dir="xml" includes="*.xml"/>
+			<fileset dir="xml" includes="*.xml" />
 		</delete>
 		<echo>${javadoc}</echo>
 		<javadoc doclet="org.osgi.tools.xmldoclet.XmlDoclet" docletpath="../org.osgi.tools/src" encoding="utf-8" packagenames="${javadoc}">
@@ -20,7 +20,7 @@
 				<dirset dir="${workspace}">
 					<include name="*/src" />
 				</dirset>
-			    <pathelement location="${servlet}"/>
+				<pathelement location="${servlet}" />
 			</classpath>
 		</javadoc>
 
@@ -29,16 +29,15 @@
 		</java>
 
 		<foreach delimiter=" ," target="-html2mif" param="item" inheritAll="true">
-			<fileset dir="xml" includes="*.xml"/>
+			<fileset dir="xml" includes="*.xml" />
 		</foreach>
-	
+
 	</target>
 
 	<target name="ees" depends="init">
-
 		<java classname="org.osgi.tools.jar2xml.JAR2XML" classpath="${jar2xml}" fork="true" output="ee.xml">
-			<arg line="-tagged minimum ${repo}/ee.minimum/ee.minimum-1.1.3.jar" />
-			<arg line="-tagged foundation ${repo}/ee.foundation/ee.foundation-1.1.0.jar" />
+			<arg line="-tagged minimum ${minimum-latest}" />
+			<arg line="-tagged foundation ${foundation-latest}" />
 		</java>
 		<echo>Converted JARs to XML</echo>
 		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="ee.html">
@@ -53,21 +52,55 @@
 	</target>
 
 	<target name="eediff" depends="init">
-		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="eediff.html">
-			<arg line="eediffs/FP1.0-FP1.1.xml xsl/eediff.xsl" />
+		<taskdef resource="dependencyfindertasks.properties" classpath="${dependencyfinder}" />
+
+		<antcall target="-eediff">
+			<param name="ee" value="minimum"/>
+			<param name="ee.previous.jar" value="${minimum-previous.jar}"/>
+			<param name="ee.latest.jar" value="${minimum-latest.jar}"/>
+			<param name="ee.previous" value="${minimum-previous}"/>
+			<param name="ee.latest" value="${minimum-latest}"/>
+		</antcall>
+
+		<antcall target="-eediff">
+			<param name="ee" value="foundation"/>
+			<param name="ee.latest.jar" value="${foundation-latest.jar}"/>
+			<param name="ee.previous.jar" value="${foundation-previous.jar}"/>
+			<param name="ee.latest" value="${foundation-latest}"/>
+			<param name="ee.previous" value="${foundation-previous}"/>
+		</antcall>
+
+		</target>
+		
+	<target name="-eediff">
+		<echo>Reading ${ee} ${ee.latest.jar} ${ee.previous.jar} ${ee.latest} ${ee.previous}</echo>
+		<jarjardiff destfile="${target}/ee.diff.xml"
+		              name="ee.${ee}"
+		              oldlabel="${ee.previous}"
+		              newlabel="${ee.latest}">
+		    <old>
+		      <pathelement location="${ee.previous.jar}"/>
+		    </old>
+		    <new>
+			  <pathelement location="${ee.latest.jar}"/>
+		    </new>
+		  </jarjardiff>
+		
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="${target}/ee.diff.html">
+			<arg line="${target}/ee.diff.xml xsl/eediff.xsl" />
 		</java>
+		
 		<echo>Generated HTML file</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="eediff.tmp">
-			<arg line="eediff.html xsl/html2mif.xsl" />
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="${target}/ee.diff.tmp">
+			<arg line="${target}/ee.diff.html xsl/html2mif.xsl" />
 		</java>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="eediff.tmp" output="mif/eediff.mif">
-		</java>		
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="${target}/ee.diff.tmp" output="mif/ee.${ee}.diff.mif"/>
 	</target>
-	
+
 	<target name="ddf" depends="init">
-		<deltree dir="ddftmp"/>
+		<deltree dir="ddftmp" />
 		<copy flatten="true" todir="ddftmp" failonerror="true" verbose="true">
-			<fileset dir="../ddf" includes="**/*.xml"/>
+			<fileset dir="../ddf" includes="**/*.xml" />
 		</copy>
 		<foreach list="${ddf}" delimiter=" ," target="-ddf2mif" param="item" inheritAll="true" />
 	</target>
@@ -82,24 +115,21 @@
 	</target>
 
 	<target name="-ddf2mif">
-		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" 
-			output="ddftmp/${item}.htm">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="ddftmp/${item}.htm">
 			<arg line="ddftmp/${item}.xml xsl/ddf2mif.xsl" />
 		</java>
 		<echo>Generated HTML file</echo>
-		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" 
-			fork="true" output="ddftmp/${item}.tmp">
+		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true" output="ddftmp/${item}.tmp">
 			<arg line="ddftmp/${item}.htm xsl/html2mif.xsl" />
 		</java>
 		<echo>Generated XML MIF file</echo>
-		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" 
-		input="ddftmp/${item}.tmp" output="mif/${item}.mif">
+		<java classname="org.osgi.tools.xml2mif.XML2MIF" fork="true" classpath="${xml2mif}" input="ddftmp/${item}.tmp" output="mif/${item}.mif">
 		</java>
 		<echo>Generated MIF file</echo>
 	</target>
 
 	<target name="-html2mif">
-		<basename property="base" file="${item}" suffix=".xml"/>
+		<basename property="base" file="${item}" suffix=".xml" />
 		<java classname="com.icl.saxon.StyleSheet" classpath="${saxon}" fork="true">
 			<arg line="-o ${base}.tmp xml/${base}.xml xsl/html2mif.xsl" />
 		</java>
