fix project names

--- a/org.osgi.test.cases.cdma/.project
+++ b/org.osgi.test.cases.cdma/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.test.cases.template</name>
+	<name>org.osgi.test.cases.cdma</name>
 	<comment></comment>
 	<projects>
 	</projects>
