--- a/osgi.companion/build.xml
+++ b/osgi.companion/build.xml
@@ -39,7 +39,7 @@
 			<bottom><![CDATA[<font size=-1>${copyright.html} Licensed under the <a href="{@docRoot}/LICENSE.html">OSGi Specification License, Version 1.0</a></font>]]></bottom>
 			<doctitle><![CDATA[OSGi&trade; Service Platform Release ${osgi.release} Version ${osgi.version}]]></doctitle>
 		</javadoc>
-		<copy file="${project}/legal/OSGiSpecificationLicense-v10.html"
+		<copy file="${project.dir}/legal/OSGiSpecificationLicense-v10.html"
 		    tofile="${target}/javadoc/LICENSE.html"
 	    	verbose="${verbose}"
 	      	preservelastmodified="true" />
@@ -49,7 +49,7 @@
 		<mkdir dir="${target}/japi"/>
 		<echo>osgi.core</echo>
 		<java classname="net.wuffies.japi.Japize">
-			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
+			<classpath path="${project.workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
 			<arg value="${target}/japi/osgi.core-latest.japi" />
@@ -60,7 +60,7 @@
 		</java>
 		<echo>osgi.cmpn</echo>
 		<java classname="net.wuffies.japi.Japize">
-			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
+			<classpath path="${project.workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
 			<arg value="${target}/japi/osgi.cmpn-latest.japi" />
@@ -74,7 +74,7 @@
 		</java>
 		<echo>osgi.mobile</echo>
 		<java classname="net.wuffies.japi.Japize">
-			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
+			<classpath path="${project.workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
 			<arg value="${target}/japi/osgi.mobile-latest.japi" />
@@ -87,7 +87,7 @@
 		</java>
 		<echo>ee.minimum</echo>
 		<java classname="net.wuffies.japi.Japize">
-			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
+			<classpath path="${project.workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
 			<arg value="${target}/japi/ee.minimum-latest.japi" />
@@ -98,7 +98,7 @@
 		</java>
 		<echo>ee.foundation</echo>
 		<java classname="net.wuffies.japi.Japize">
-			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
+			<classpath path="${project.workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
 			<arg value="${target}/japi/ee.foundation-latest.japi" />
@@ -112,98 +112,98 @@
 	<target name="japicompat" depends="init">
 		<echo>osgi.core</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.core-japicompat.html" />
-			<arg value="${project}/japi-published/osgi.core-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.core-published.japi" />
 			<arg value="${target}/japi/osgi.core-latest.japi" />
 		</exec>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.core-changed-japicompat.html" />
 			<arg value="${target}/japi/osgi.core-latest.japi" />
-			<arg value="${project}/japi-published/osgi.core-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.core-published.japi" />
 		</exec>
 		<echo>osgi.cmpn</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.cmpn-japicompat.html" />
-			<arg value="${project}/japi-published/osgi.cmpn-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.cmpn-published.japi" />
 			<arg value="${target}/japi/osgi.cmpn-latest.japi" />
 		</exec>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.cmpn-changed-japicompat.html" />
 			<arg value="${target}/japi/osgi.cmpn-latest.japi" />
-			<arg value="${project}/japi-published/osgi.cmpn-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.cmpn-published.japi" />
 		</exec>
 		<echo>osgi.mobile</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.mobile-japicompat.html" />
-			<arg value="${project}/japi-published/osgi.mobile-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.mobile-published.japi" />
 			<arg value="${target}/japi/osgi.mobile-latest.japi" />
 		</exec>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-v" />
 			<arg value="-o" />
 			<arg value="${target}/japi/osgi.mobile-changed-japicompat.html" />
 			<arg value="${target}/japi/osgi.mobile-latest.japi" />
-			<arg value="${project}/japi-published/osgi.mobile-published.japi" />
+			<arg value="${project.dir}/japi-published/osgi.mobile-published.japi" />
 		</exec>
 		<echo>ee.minimum</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-o" />
 			<arg value="${target}/japi/ee.minimum-japicompat.html" />
-			<arg value="${project}/japi-published/ee.minimum-published.japi" />
+			<arg value="${project.dir}/japi-published/ee.minimum-published.japi" />
 			<arg value="${target}/japi/ee.minimum-latest.japi" />
 		</exec>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-o" />
 			<arg value="${target}/japi/ee.minimum-changed-japicompat.html" />
 			<arg value="${target}/japi/ee.minimum-latest.japi" />
-			<arg value="${project}/japi-published/ee.minimum-published.japi" />
+			<arg value="${project.dir}/japi-published/ee.minimum-published.japi" />
 		</exec>
 		<echo>ee.foundation</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-o" />
 			<arg value="${target}/japi/ee.foundation-japicompat.html" />
-			<arg value="${project}/japi-published/ee.foundation-published.japi" />
+			<arg value="${project.dir}/japi-published/ee.foundation-published.japi" />
 			<arg value="${target}/japi/ee.foundation-latest.japi" />
 		</exec>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-o" />
 			<arg value="${target}/japi/ee.foundation-changed-japicompat.html" />
 			<arg value="${target}/japi/ee.foundation-latest.japi" />
-			<arg value="${project}/japi-published/ee.foundation-published.japi" />
+			<arg value="${project.dir}/japi-published/ee.foundation-published.japi" />
 		</exec>
 		<echo>ee compare</echo>
 		<exec executable="perl" failifexecutionfails="false">
-			<arg value="${workspace}/licensed/japitools/bin/japicompat" />
+			<arg value="${project.workspace}/licensed/japitools/bin/japicompat" />
 			<arg value="-h" />
 			<arg value="-o" />
 			<arg value="${target}/japi/ee.minimum2foundation-japicompat.html" />
