--- a/osgi.companion/build.xml
+++ b/osgi.companion/build.xml
@@ -17,7 +17,7 @@
 			noindex="false" 
 			nonavbar="false" 
 			notree="false" 
-			packagenames="${spec.packages}" 
+			packagenames="${javadoc.packages}" 
 			source="1.3" 
 			splitindex="true" 
 			use="false" 
