--- a/osgi.specs/build.xml
+++ b/osgi.specs/build.xml
@@ -14,6 +14,7 @@
 			<sourcepath>
 				<dirset dir="${project.workspace}">
 					<include name="*/src" />
+					<exclude name="r5*"/>
 				</dirset>
 			</sourcepath>
 			<classpath>
